# Zonohedra

./: LICENSE.txt  README.md  gorpho_consts.cuh  gorpho_kernels.cuh  gorpho_util.cuh  helper_math.cuh  zono_params.json
cudablockproc/: README.md
cudablockproc/lib/: cudablockproc.inl
matlab/: DilateDecomp.m  ErodeDecomp.m  compile_mex.m  demo.m  gorpho_matlab_utils.cu  gorpho_matlab_utils.cuh  mex_gorpho_flatLinearDilateErode3d_block.cu  mex_gorpho_flatLinearDilateErode3d_block.m  mex_gorpho_genDilateErode3d_block.cu  mex_gorpho_genDilateErode3d_block.m
python/: CMakeLists.txt  demo.py  pygorpho.py  pygorpho_api.cu
zono_decomp/: StrelOptConFun.m  StrelOptHessFun.m  StrelOptObjFun.m  StrelSphereDecomp.m  StrelZonoSphereDist.m  StrelZonotope.m
